--- a/client/index.html
+++ b/client/index.html
@@ -107,7 +107,7 @@
       </div>
     </section>
 
-    <!-- Search a product -->
+    <!-- Search a Product -->
     <section>
       <h2 class="table-header">Search & Edit Product</h2>
       <input min="0" type="number" class="searchbar" placeholder="Enter Product ID">
@@ -120,10 +120,8 @@
               <th class="no-sort">ID</th>
               <th class="no-sort">Product</th>
               <th class="no-sort">Origin</th>
-              <!-- The class "sorter-dates" adds the custom date sorter -->
               <th class="no-sort">Best before date</th>
               <th class="no-sort">Amount</th>
-              <!-- The class "no-sort" makes sure the Image column is not sortable -->
               <th class="no-sort">Image</th>
             </tr>
           </thead>
