--- a/evaluation.html
+++ b/evaluation.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Documentation - Bedrunka API</title>
+    <title>Synthesis and Evaluation - Bedrunka</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
