--- a/evaluation.html
+++ b/evaluation.html
@@ -19,7 +19,14 @@
       }
     </style>
   </head>
-  
+
   <body>
+    <h1>Synthesis and Evaluation</h1>
+    <p>
+      January 24, 2021<br>
+      Group 7<br>
+      Alex Lushiku, Andrzej Kominek
+    </p>
+    <hr>
   </body>
 </html>
