--- a/evaluation.html
+++ b/evaluation.html
@@ -28,6 +28,8 @@
       Alex Lushiku, Andrzej Kominek
     </p>
     <hr>
-
+    <h2>Introduction</h2>
+    <h2>Accessibility Highlights</h2>
+    <h2>Improvement Plan</h2>
   </body>
 </html>
