--- a/evaluation.html
+++ b/evaluation.html
@@ -29,8 +29,9 @@
     </p>
     <hr>
     
+    <h2>Appendix</h2>
     <table>
-      <caption>Table A</caption>
+      <caption>Table A - Web Content Accessibility Guidelines</caption>
       <thead>
 
       </thead>
@@ -40,7 +41,7 @@
     </table>
       
     <table>
-      <caption>Table B</caption>
+      <caption>Table B - TA feedback from assignments 1 & 2</caption>
       <thead>
 
       </thead>
