--- a/evaluation.html
+++ b/evaluation.html
@@ -31,7 +31,7 @@
     
     <h2>Appendix</h2>
     <table>
-      <caption>Table A - Web Content Accessibility Guidelines</caption>
+      <caption>Appendix A - Web Content Accessibility Guidelines</caption>
       <thead>
 
       </thead>
@@ -41,12 +41,16 @@
     </table>
       
     <table>
-      <caption>Table B - TA feedback from assignments 1 & 2</caption>
+      <caption>Appendix B - TA feedback from assignments 1 & 2</caption>
       <thead>
-
+        <th>Technical implementation detail that has no impact on the usability or accessibility of the page</th>
+        <th>Positive aspect of the page that improves usability or accessibility</th>
+        <th>Potentially negative aspect of the page that could be used to improve the usability or accessibility of the page</th>
       </thead>
       <tr>
-
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
     </table>
 
