--- a/evaluation.html
+++ b/evaluation.html
@@ -53,7 +53,12 @@
       <tr>
         <td></td>
         <td></td>
+        <td>Print style had too much white and empty space as well as the scroll bars and forms were not deleted</td>
+      </tr>
+      <tr>
         <td></td>
+        <td></td>
+        <td>Table was not done using responsive design - it was scrollable</td>
       </tr>
     </table>
 
