--- a/evaluation.html
+++ b/evaluation.html
@@ -51,14 +51,19 @@
         <th>Potentially negative aspect of the page that could be used to improve the usability or accessibility of the page</th>
       </thead>
       <tr>
-        <td></td>
-        <td></td>
+        <td>list-style-type missing</td>
+        <td>Every functionality related to database and data in table works - resetting and submission of products</td>
         <td>Print style had too much white and empty space as well as the scroll bars and forms were not deleted</td>
       </tr>
       <tr>
         <td></td>
-        <td></td>
+        <td>Most of the page is responsive</td>
         <td>Table was not done using responsive design - it was scrollable</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td>Sorting works on every table on the page</td>
+        <td></td>
       </tr>
     </table>
 
