--- a/evaluation.html
+++ b/evaluation.html
@@ -52,20 +52,14 @@
       </thead>
       <tr>
         <td>list-style-type missing</td>
-        <td>Every functionality related to database and data in table works - resetting and submission of products</td>
-        <td>Print style had too much white and empty space as well as the scroll bars and forms were not deleted</td>
+        <td>Every functionality related to database and data in table works - resetting and submission of products as well as sorting</td>
+        <td>Print style has too much white and empty space as well as the scroll bars and forms are not deleted</td>
       </tr>
       <tr>
-        <td></td>
-        <td>Most of the page is responsive</td>
-        <td>Table was not done using responsive design - it was scrollable</td>
-      </tr>
-      <tr>
-        <td></td>
-        <td>Sorting works on every table on the page</td>
-        <td></td>
+        <td>Code in both HTML and CSS are written neatly with good structure and are after successful validator check</td>
+        <td>Most of the page is responsive and looks good on smaller screen sizes</td>
+        <td>Table is not done according to responsive design - it is scrollable</td>
       </tr>
     </table>
-
   </body>
 </html>
