--- a/evaluation.html
+++ b/evaluation.html
@@ -51,7 +51,7 @@
         <th>Potentially negative aspect of the page that could be used to improve the usability or accessibility of the page</th>
       </thead>
       <tr>
-        <td>list-style-type missing</td>
+        <td>list-style-type is missing</td>
         <td>Every functionality related to database and data in table works - resetting and submission of products as well as sorting</td>
         <td>Print style has too much white and empty space as well as the scroll bars and forms are not deleted</td>
       </tr>
