--- a/evaluation.html
+++ b/evaluation.html
@@ -46,6 +46,22 @@
     </p>
     <hr>
     <section>
+      <h2>Index</h2>
+      <ul>
+        <li><a href="#introduction">Introduction</a></li>
+        <li><a href="#highlights">Accessibility Highlights</a></li>
+        <li><a href="#plan">Improvement Plan</a></li>
+        <li>
+          <a href="#appendices">Appendices</a>
+          <ul>
+            <li><a href="#appendices-a">Appendix A</a></li>
+            <li><a href="#appendices-b">Appendix B</a></li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+
+    <section id="introduction">
       <h2>Introduction</h2>
       <p>
         Bedrunka’s homepage includes featured products, a searchbar to find a product and a few recipes for the user to try out. The page is designed with responsiveness in mind, so that the page is accessible on any resolution. Interactive buttons have descriptive text and a matching color, so it is clear what it does.<br><br>
@@ -55,7 +71,7 @@
       </p>
     </section>
 
-    <section>
+    <section id="highlights">
     <h2>Accessibility Highlights</h2>
       <p>
         We want our page to be accessible to as many users as possible and therefore we can use the Web Content Accessibility Guidelines (WCAG) 2.0 to make sure this requirement is met.<br><br>
@@ -64,7 +80,7 @@
       </p>
     </section>
 
-    <section>
+    <section id="plan">
       <h2>Improvement Plan</h2>
       <dl>
         <dt>Addition of list-style-type</dt>
@@ -88,9 +104,9 @@
       </dl>
     </section>
 
-    <section>
+    <section id="appendices">
       <h2>Appendices</h2>
-      <table>
+      <table id="appendices-a">
         <caption>Appendix A - Web Content Accessibility Guidelines</caption>
         <thead>
           <tr>
@@ -148,7 +164,7 @@
         </tbody>
       </table>
         
-      <table>
+      <table id="appendices-b">
         <caption>Appendix B - TA feedback from assignments 1 & 2</caption>
         <thead>
           <th>Technical implementation detail that has no impact on the usability or accessibility of the page</th>
