fixed stuff from improvement plan

--- a/client/index.html
+++ b/client/index.html
@@ -102,13 +102,13 @@
             </tbody>
           </table>
           <button type="submit" class="btn-add-product">Add Product</button>
-          <div class="btn-reset">Reset Data</div>
+          <button class="btn-reset">Reset Data</button>
         </form>
       </div>
     </section>
 
     <!-- Search a Product -->
-    <section>
+    <section id="section-search">
       <h2 class="table-header">Search & Edit Product</h2>
       <input min="0" type="number" class="searchbar" placeholder="Enter Product ID">
       <button type="submit" class="btn-search">Search</button>
