--- a/evaluation.html
+++ b/evaluation.html
@@ -91,7 +91,8 @@
         <dd>
           Remove header image and ASCII art from other media types using CSS media queries.
         </dd>
-
+        <dt>Increase contrast</dt>
+        <dd>Increase contrast for "Reset Data" and "Add Product" buttons to comply with Level AAA.</dd>
         <dt>Line-spacing</dt>
         <dd>
           Line spacing (leading) should be at least space-and-a-half within paragraphs, and paragraph spacing is at least 1.5 times larger than the line spacing. This can be achieved by adding <code>line-height: 150%</code> in CSS for every text element.
