--- a/evaluation.html
+++ b/evaluation.html
@@ -120,12 +120,14 @@
           Empty space could be fixed looking at the rules of <code>page-break</code> in CSS file. 
           We would also need to hide the scroll bars and form in <code>@media print</code> using <code>display: none</code>
         </dd>
-        <dt>Responsive table</dt>
+        <dt>Responsive table (problem resolved, not for implementation)</dt>
         <dd>
-          This problem touches the screen users. The table does not flip and does not become vertical 
-          but rather changes into being scrollable sideways. We thought initially that was a good solution 
-          but in order to make the whole page responsive, we would need to flip the table for screen users. 
-          For this we would need to 
+          This problem touches the screen users. The table does not flip but rather changes into being scrollable sideways, which was told to us by our TA. He said 
+          that the table should rather collapse, but we still believe it is one of the correct versions 
+          of how one can create a responsive table and by W3 standards, it is also a valid solution. 
+          That is why it is the only part of Improvement plan that we decided not to improve, also because 
+          of the fact that it would be problematic to implement and not get rid of a functionality or 
+          causing the whole code to be overhauled in order to make everything work. 
         </dd>
       </dl>
     </section>
