--- a/evaluation.html
+++ b/evaluation.html
@@ -112,7 +112,7 @@
         <dt>Addition of list-style-type</dt>
         <dd>
           Due to this small overlook on our side, we can easily add this in CSS to existing table. 
-          An examplary solution would be a type of numeration added to one of the present lsits on the page.
+          An examplary solution would be a type of numeration added to one of the present lists on the page.
         </dd>
         <dt>Correcting print style</dt>
         <dd>
