--- a/evaluation.html
+++ b/evaluation.html
@@ -69,11 +69,11 @@
     <section id="introduction">
       <h2>Introduction</h2>
       <p>
-        Bedrunka’s homepage includes featured products, a searchbar to find a product and a few recipes for the user to try out. The page is designed with responsiveness in mind, so that the page is accessible on any resolution. Interactive buttons have descriptive text and a matching color, so it is clear what it does.<br><br>
+        Bedrunka’s homepage includes featured products, a searchbar to find a product and a few recipes for the user to try out. The page is designed with responsiveness in mind, so that the page is accessible on any resolution. Interactive buttons have descriptive text and a matching colour, so it is clear what it does.<br><br>
         Users can add, edit, or delete products and if the user wants to find a specific product, one can search for a product by id.<br><br>
-        All sections are seperated by a descriptive header and are easy to find by using the navigation bar on top which contains links to each section.<br><br>
+        All sections are separated by a descriptive header and are easy to find by using the navigation bar on top which contains links to each section.<br><br>
         The page does not contain audio and can be printed for essential information, which is shown on the page.<br><br>
-        Whole page was creted by two students in just under a month of time. Limitations were that we had to learn and build the hwole page from the scratch using the basics of our knowledge. The impact of it is that maybe the page does not look the best or could be improved in some aspects, but the page works correctly and is quite well done for such a short time period.
+        Whole page was craeted by two students in just under a month of time. Limitations were that we had to learn and build the page from the scratch using the basics of our knowledge. The impact of it is that maybe the page does not look the best or could be improved in some aspects, but the page works correctly and is quite well done for such a short time period.
       </p>
     </section>
 
