--- a/evaluation.html
+++ b/evaluation.html
@@ -169,11 +169,11 @@
           <tr>
             <td>1.4</td>
             <td>
-              Bedrunka makes it easy for the users to distinguish content from the background by providing enough contrast in color (AA). Only the “Delete Product” and “Reset Data” buttons do not provide enhanced contrast according to Level AAA.<br><br>
+              Bedrunka makes it easy for the users to distinguish content from the background by providing enough contrast in colour (AA). Only the “Delete Product” and “Reset Data” buttons do not provide enhanced contrast according to Level AAA.<br><br>
               Text is not justified and visible on 200 percent zoom without assistive technology, but the tables are only fully visible with horizontal scroll. The product returned from the search bar, however, does not provide a scrollbar and therefore the product is not entirely visible on 200 percent zoom. (AA)<br><br>
               No images of text are used to convey information except for any logos and there is no background audio. (AA)<br><br>
               No technique is used in CSS to ensure line spacing is at least space-and-a-half within paragraphs, and at least 1.5 times larger than the line spacing. (AAA)<br><br>
-              Foreground and background colors cannot be selected by the user and Bedrunka does provide responsive text such that no horizontal scrolling will occur. (AAA)
+              Foreground and background colours cannot be selected by the user and Bedrunka does provide responsive text such that no horizontal scrolling will occur. (AAA)
             </td>
           </tr>
           <tr>
