--- a/evaluation.html
+++ b/evaluation.html
@@ -88,7 +88,13 @@
 
     <section id="plan">
       <h2>Improvement Plan</h2>
+      <p>
+        The prioritisation of the tasks is made from top to bottom of the list in each section. 
+        Each part is as important as the other one, that is why we can pick from which part we want 
+        to improve something and then we can go one by one and check the points off of the list.
+      </p>
       <dl>
+        <dt>Accessibility part</dt>
         <dt>Remove decorative content when using assistive technology</dt>
         <dd>
           Remove header image and ASCII art from other media types using CSS media queries.
@@ -115,6 +121,8 @@
           why we will change the tags of these for <code>button</code>.
         </dd>
 
+        <br>
+        <dt>Usability part</dt>
         <dt>Addition of list-style-type</dt>
         <dd>
           Due to this small overlook on our side, we can easily add this in CSS to existing table. 
