--- a/evaluation.html
+++ b/evaluation.html
@@ -1,4 +1,4 @@
-<!--TODO: ask about the responsivness and show W3 -->
+<!--TODO: ask about the responsivness and show W3 and what to submit-->
 <!doctype html>
 <html lang="en">
   <head>
