--- a/evaluation.html
+++ b/evaluation.html
@@ -96,7 +96,7 @@
         to improve something and then we can go one by one and check the points off of the list.
       </p>
       <dl>
-        <dt>Accessibility part</dt>
+        <h3>Accessibility part</h3>
         <dt>Remove decorative content when using assistive technology</dt>
         <dd>
           Remove header image and ASCII art from other media types using CSS media queries.
@@ -122,9 +122,10 @@
           Issue seems to be laying on the side of buttons that were not actual HTML buttons, that is 
           why we will change the tags of these for <code>button</code>.
         </dd>
+      </dl>
 
-        <br>
-        <dt>Usability part</dt>
+      <dl>
+        <h3>Usability part</h3>
         <dt>Addition of list-style-type</dt>
         <dd>
           Due to this small overlook on our side, we can easily add this in CSS to existing table. 
@@ -216,14 +217,14 @@
           <th>Potentially negative aspect of the page that could be used to improve the usability or accessibility of the page</th>
         </thead>
         <tr>
-          <td>list-style-type is missing</td>
-          <td>Every functionality related to database and data in table works - resetting and submission of products as well as sorting</td>
-          <td>Print style has too much white and empty space as well as the scroll bars and forms are not deleted</td>
+          <td><code>list-style-type</code> is missing.</td>
+          <td>Every functionality related to database and data in table works - resetting and submission of products as well as sorting.</td>
+          <td>Print style has too much white and empty space as well as the scroll bars and forms are not deleted.</td>
         </tr>
         <tr>
-          <td>Code in both HTML and CSS are written neatly with good structure and are after successful validator check</td>
-          <td>Most of the page is responsive and looks good on smaller screen sizes</td>
-          <td>Table is not done according to responsive design of collapsing</td>
+          <td>Code in both HTML and CSS are written neatly with good structure and are after successful validator check.</td>
+          <td>Most of the page is responsive and looks good on smaller screen sizes.</td>
+          <td>Table was marked not being done according to responsive design of collapsing.</td>
         </tr>
       </table>
     </section>
